checkboxes and labels vertical alignment fix

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@
 }
 .compact.table > tbody > tr > *{
 	border: none;
+	vertical-align: middle;
 }
 .compact.table{
 	width:initial;
